force-app/main/default/objects/Loan__c/fields/IntrestRate__c.field-meta.xml
<CustomField>
    <fullName>IntrestRate__c</fullName>
    <label>IntrestRate</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loan_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>7%</fullName>
            </value>
            <value>
                <fullName>12%</fullName>
            </value>
            <value>
                <fullName>14%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>