force-app/main/default/objects/Loan__c/fields/Select_Customer__c.field-meta.xml
<CustomField>
    <fullName>Select_Customer__c</fullName>
    <label>Select Customer</label>
    <referenceTo>Loan_Customer__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>