force-app/main/default/objects/Loan__c/fields/TenureInMonths__c.field-meta.xml
<CustomField>
    <fullName>TenureInMonths__c</fullName>
    <label>TenureInMonths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>